--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,9 @@ body {
   color: white;
   font-family: Raleway;
   .intro {
+    padding: 0 5vw;
     color: rgb(0, 0, 54);
-    font-size: 10vh;
+    font-size: 8vh;
     margin: 0;
     position: fixed;
     top: 50vh;
