--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ body {
   box-sizing: border-box;
   color: white;
   font-family: Raleway;
+  will-change: background-image;
   .intro {
     padding: 0 5vw;
     color: rgb(0, 0, 54);
